Added some styling, and got the first couple api calls working. You can now search for users.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Let's Play!</title>
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap-responsive.css') }}" />
 </head>
@@ -14,7 +15,7 @@
   <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
   <script src="{{ url_for('static', filename='js/jquery.watermark.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/jquery.data.js') }}"></script>
-  
+
   <script src="{{ url_for('static', filename='js/letsplay.js') }}"></script>
 </body>
 </html>
