--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap-responsive.css') }}" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.png') }}" />
 </head>
 <body>
   <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
