--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -13,7 +13,9 @@
   min-height:64px;
 }
 .ambidex{
+  width:100px;
   float:none;
+  clear:both;
 }
 .wrap_content {
   width:auto !important;
@@ -23,6 +25,8 @@
   color:#FFF;
   background:linear-gradient(#CCC, #000);
   border-radius: 15px;
+  border-style:outset;
+  border-width:4px;
   overflow:hidden;
   padding:10px 10px 10px 10px;
   display:inline-block;
