--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -23,10 +23,11 @@
 }
 .steamify{
   color:#FFF;
-  background:linear-gradient(#CCC, #000);
+  background: #111;
   border-radius: 15px;
-  border-style:outset;
+  border-style:solid;
   border-width:4px;
+  border-color: #27ae60;
   overflow:hidden;
   padding:10px 10px 10px 10px;
   display:inline-block;
