--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -24,14 +24,18 @@
 .steamify{
   color:#FFF;
   background: #111;
-  border-radius: 15px;
-  border-style:solid;
-  border-width:4px;
-  border-color: #27ae60;
   overflow:hidden;
   padding:10px 10px 10px 10px;
   display:inline-block;
 }
+
+.bordered{
+  border-radius: 15px;
+  border-style:solid;
+  border-width:4px;
+  border-color: #27ae60;
+}
+
 .outline{
   border:4px ridge #CCC;
   border-radius: 15px;
