--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -23,7 +23,7 @@
 }
 .steamify{
   color:#FFF;
-  background: #111;
+  background: #222;
   overflow:hidden;
   padding:10px 10px 10px 10px;
   display:inline-block;
@@ -34,6 +34,7 @@
   border-style:solid;
   border-width:4px;
   border-color: #27ae60;
+  background-color: #444;
 }
 
 .outline{
