--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,3 +1,8 @@
+body{
+  color:#fff;
+  background-color: #222;
+}
+
 .lefty {
   float:left;
   margin-left:4px;
@@ -22,8 +27,6 @@
   min-width:0px;
 }
 .steamify{
-  color:#FFF;
-  background: #222;
   overflow:hidden;
   padding:10px 10px 10px 10px;
   display:inline-block;
@@ -38,14 +41,7 @@
 }
 
 .outline{
-  border:4px ridge #CCC;
-  border-radius: 15px;
-  padding: 10px 10px 10px 10px;
   overflow:auto;
-}
-
-.fill_gray{
-  background-color:#DDD;
 }
 
 .centered {
@@ -60,8 +56,8 @@
 }
 
 button, input {
-  background-color: #444;
   color: #fff;
+  background-color: #444;
   border: 1px solid #2980b9;
   padding: 10px;
 }
